HTML headings and paragraphs

--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
   <body>
     <!-- Headings -->
     <h1>Hello HTML h1</h1>
+    <h2>Hello HTML h2</h2>
+    <h3>Hello HTML h3</h3>
+    <h4>Hello HTML h4</h4>
+    <h5>Hello HTML h5</h5>
+    <h6>Hello HTML h6</h6>
+
+    <!-- Paragraphs -->
+    <p>Ini adalah paragraf</p>
+    <!-- spasi dan enter dibawah ini gak ngaruh ke tampilan -->
+    <p>Ini      adalah
+      paragraf</p>
   </body>
 </html>
 
