Tables, Unordered List and Ordered List

--- a/index.html
+++ b/index.html
@@ -44,6 +44,50 @@
     <!-- atribut src dengan menggunakan directory -->
     <img src="/img/wreck-it-ralph-2.jpg" alt="Wreck It Ralph 2"/>
     <!-- element self closing untuk element img, jadi bisa tidak menggunakan element pembuka dan penutup -->
+
+    <table>
+      <!-- tr adalah table row (baris) -->
+      <tr>
+        <!-- th adalah table header (judul) -->
+        <th>No.</th>
+        <th>Nama Makanan</th>
+        <th>Harga</th>
+        <th>Keterangan</th>
+      </tr>
+       <tr>
+        <!-- td adalah table cell (isi table) -->
+        <td>1</td>
+        <td>Ayam Bakar</td>
+        <td>25.000</td>
+        <td>Pedas</td>
+      </tr>
+       <tr>
+        <td>2</td>
+        <td>Ayam Goreng</td>
+        <td>27.000</td>
+        <td>Tidak Pedas</td>
+      </tr>
+       <tr>
+        <td>3</td>
+        <td>Ayam Geprek</td>
+        <td>29.000</td>
+        <td>Level 10</td>
+      </tr>
+    </table>
+     <!-- ul adalah unorderlist -->
+    <ul>
+      <li>Merah</li>
+      <li>Jingga</li>
+      <li>Kuning</li>
+      <li>Hijau</li>
+    </ul>
+     <!-- ol adalah order list -->
+    <!-- dapat ditambahkan dengan atribut type dan beberapa pilihan value nya -->
+    <ol type="A">
+      <li>Biru</li>
+      <li>Nila</li>
+      <li>Ungu</li>
+    </ol>
   </body>
 </html>
 
