--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
     <!-- ini iframe dari maps.google, bagikan, sematkan peta, salin html -->
     <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3960.38740347026!2d107.66626241422486!3d-6.96354349496918!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68e82a73939199%3A0x8dcacdac59acc7a7!2sBaturaden+Indah+Residence!5e0!3m2!1sid!2sid!4v1543989935558" width="560" height="315"allowfullscreen></iframe> -->
 
-    <!-- element input -->
-    <input type="text"><br>
+    <!-- element input dan break <br>-->
+    <!-- <input type="text"><br>
     <input type="password"><br>
     <input type="submit"><br>
     <input type="reset"><br>
@@ -115,7 +115,21 @@
     <input type="tel"><br>
     <input type="time"><br>
     <input type="url"><br>
-    <input type="week"><br>
+    <input type="week"><br> -->
+
+    <!-- element form -->
+    <form>
+      <input type="text"><br>
+      <input type="password"><br>
+      <input type="radio"><br>
+      <input type="radio"><br>
+      <input type="checkbox"><br>
+      <input type="checkbox"><br>
+      <input type="number"><br>
+      <input type="email"><br>
+      <input type="reset"><br>
+      <input type="submit"><br>
+    </form>
 
 
   </body>
