Label - Text Area - Button

--- a/index.html
+++ b/index.html
@@ -178,7 +178,27 @@
       <option>Cokelat Kemerahan</option>
       <option>Cokelat Kekuningan</option>
       <option>Cokelat Kebiruan</option>
-    </datalist><br>
+    </datalist><br><br><br><br>
+
+    <!-- elemet textarea seperti input text tetapi multi line, kalau text satu line-->
+    <label>Nama Lengkap:</label>
+    <input type="text"><br>
+    <label>Alamat:</label>
+    <!-- biasanya digunakan untuk alamat -->
+    <!-- jika ditulis didalam textarea maka itu akan menjadi tulisan di tampilannya -->
+    <textarea>
+    </textarea>
+    <br>
+    <!-- element button, seperti pada form namun lebih sering digunakan karena di luar form jadi lebih fleksibel -->
+    <button>Simpan</button>
+    <br><br><br>
+
+    <form>
+      <input type="text"/>
+      <!-- digunakan ketika menggunakan form -->
+      <input type="submit" value="Simpan"/>
+      <input type="reset"value="Reset Input"/>
+    </form>
 
   </body>
 </html>
