--- a/index.html
+++ b/index.html
@@ -209,6 +209,19 @@
     <!-- atribut id dan class digunakan ketika menggunakan css -->
     <!-- id itu unik, tidak boleh sama. namun class boleh sama -->
     <!-- <input type="text" placeholder="Nama Lengkap"/> -->
+    <br><br><br>
+    <!-- element div berfungsi untuk grouping, memudahkan ketika menggunakan css-->
+    <div>
+      <div>
+        <h1>Halo</h1>
+        <p>Halo nama saya Dewi Syarah Sofiati, saya tinggal di Baturaden, saya sekarang sedang
+         menjalani bootcamp di tdi.</p>
+      </div>
+      <div>
+        <h2>Selamat Tinggal</h2>
+        <p>Oke itu saja yang dapat saya katakan, selamat pagi</p>
+      </div>
+    </div>
 
   </body>
 </html>
