Selectors Dengan Nama Element, ID dan Class

--- a/belajarcss.html
+++ b/belajarcss.html
@@ -21,5 +21,17 @@
     <h2>Belajar HTML dan CSS dengan Cara Internal</h2>
     <!-- menghubungkan html dan css dengan cara INLINE -->
     <h3 style="background-color:yellow; color:grey">HTML dan CSS dengan Cara INLINE</h3>
+
+    <!-- Selectors Dengan Nama Element, ID dan Class -->
+    <!-- Selector berdasarkan NAMA ELEMENT h4 -->
+    <h4>Selector berdasarkan nama element</h4>
+    <!-- Selector berdasarkan ID (id UNIQUE)-->
+    <h4 id="judul">Selector berdasarkan ID (UNIQUE)</h4>
+    <!-- Selector berdasarkan CLASS (tidak UNIQUE)-->
+    <h4 class="belajar">Selector berdasarkan CLASS (tidak unique)</h4>
+    <h5 class="belajar">Selector berdasarkan CLASS dua</h5>
+    <!-- ini perubahan secara spesifik -->
+    <h6 class="bel">selector dengan beberapa element</h6>
+    <p>selector dengan beberapa element</p>
   </body>
 </html>
