Property dan Color

--- a/belajarcss.html
+++ b/belajarcss.html
@@ -11,8 +11,7 @@
     <!-- menghubungkan html dan css dengan cara INTERNAL -->
     <style>
       h2{
-        background-color: navy;
-        color : grey;
+        background-color: #ec407a ;
       }
     </style>
   </head>
@@ -20,7 +19,7 @@
     <h1>Mari Belajar HTML dan CSS dengan Cara EKSTERNAL</h1>
     <h2>Belajar HTML dan CSS dengan Cara Internal</h2>
     <!-- menghubungkan html dan css dengan cara INLINE -->
-    <h3 style="background-color:yellow; color:grey">HTML dan CSS dengan Cara INLINE</h3>
+    <h3 style="background-color:#f06292;">HTML dan CSS dengan Cara INLINE</h3>
 
     <!-- Selectors Dengan Nama Element, ID dan Class -->
     <!-- Selector berdasarkan NAMA ELEMENT h4 -->
@@ -31,7 +30,11 @@
     <h4 class="belajar">Selector berdasarkan CLASS (tidak unique)</h4>
     <h5 class="belajar">Selector berdasarkan CLASS dua</h5>
     <!-- ini perubahan secara spesifik -->
-    <h6 class="bel">selector dengan beberapa element</h6>
-    <p>selector dengan beberapa element</p>
+    <h6 class="bel">Selector dengan beberapa element</h6>
+    <p>Selector dengan beberapa element</p>
+
+    <!-- Property dan Color -->
+    <h3 id="warna" class="warna">Warna dengan Nama</h3>
+    <h3>Warna dengan Hex Code</h3>
   </body>
 </html>
