Background Color - Image - Repeat -Position

--- a/belajarcss.html
+++ b/belajarcss.html
@@ -34,7 +34,7 @@
     <p>Selector dengan beberapa element</p>
 
     <!-- Property dan Color -->
-    <h3 id="warna" class="warna">Warna dengan Nama</h3>
-    <h3>Warna dengan Hex Code</h3>
+    <h3 id="warna" class="back">Warna dengan Nama</h3>
+    <h3 class="back">Warna dengan Hex Code</h3>
   </body>
 </html>
